--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+*.ckpt filter=lfs diff=lfs merge=lfs -text
+*.meta filter=lfs diff=lfs merge=lfs -text
